# ChangeLog for dev-ruby/maruku
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/maruku/ChangeLog,v 1.26 2013/09/04 11:44:36 mrueg Exp $

  04 Sep 2013; Manuel Rüger <mrueg@gentoo.org> -maruku-0.6.0-r2.ebuild:
  Cleanup old.

  23 Aug 2013; Agostino Sarubbo <ago@gentoo.org> maruku-0.6.1.ebuild:
  Stable for x86, wrt bug #481622

  23 Aug 2013; Agostino Sarubbo <ago@gentoo.org> maruku-0.6.1.ebuild:
  Stable for amd64, wrt bug #481622

  15 Jan 2013; Rick Farina <zerochaos@gentoo.org> maruku-0.6.0-r2.ebuild,
  maruku-0.6.1.ebuild:
  adding ~arm keywords to net-analyzer/metasploit rdeps

  26 Dec 2012; Agostino Sarubbo <ago@gentoo.org> maruku-0.6.0-r2.ebuild:
  Stable for x86, wrt bug #448310

  26 Dec 2012; Agostino Sarubbo <ago@gentoo.org> maruku-0.6.0-r2.ebuild:
  Stable for amd64, wrt bug #448310

*maruku-0.6.1 (24 Dec 2012)

  24 Dec 2012; Hans de Graaff <graaff@gentoo.org> +maruku-0.6.1.ebuild:
  Version bump.

  14 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> metadata.xml:
  Update metadata.xml so that it's the same as most other packages.

  25 Jul 2012; Hans de Graaff <graaff@gentoo.org> maruku-0.6.0-r2.ebuild:
  Fix USE=doc with ruby19 as main interpreter, bug 427856. Add tests but
  restrict them due to failures for now.

  25 Jul 2012; Hans de Graaff <graaff@gentoo.org> -maruku-0.6.0-r1.ebuild:
  Cleanup.

  01 May 2012; Raúl Porcel <armin76@gentoo.org> maruku-0.6.0-r1.ebuild,
  maruku-0.6.0-r2.ebuild:
  Drop ia64/sparc keywords

  31 Dec 2011; Fabian Groffen <grobian@gentoo.org> maruku-0.6.0-r2.ebuild:
  Marked ~sparc64-solaris

  31 Dec 2011; Fabian Groffen <grobian@gentoo.org> maruku-0.6.0-r2.ebuild:
  Add Prefix keywords, bug #396547

  07 Aug 2011; Raúl Porcel <armin76@gentoo.org> maruku-0.6.0-r1.ebuild,
  maruku-0.6.0-r2.ebuild:
  Add ~ia64/~sparc

*maruku-0.6.0-r2 (03 Oct 2010)

  03 Oct 2010; Hans de Graaff <graaff@gentoo.org> +maruku-0.6.0-r2.ebuild:
  Add ree18 support.
