@@ -1,4 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST maruku-0.6.1.gem 150528 SHA256 ffd973a8017ecb26606e1c1628b3d58db4ba523b4382cce292e94c800825ac07 SHA512 7264df34970b5fc53a53ba617358b4be428323438ad5eaeec70f93d100eee62ae18c8784da95a8bbc41cf36e19d4afd3d318731a991faa6276c7483b8c329cd7 WHIRLPOOL b08723fdf11507a360f92c99d57c4aad2900f2579343f214a25aa1174865b61f627cd028c7b3681ee7fc9386db0887a41e5f981eba2cc6b6d2256fe1a33ac592
+EBUILD maruku-0.6.1-r1.ebuild 1503 SHA256 61ec4efc57b5e11c5e9f92c1b1d820e2fa00eeb3f17fe389ae4d5cf3db7ae2f5 SHA512 e1bfa65b330b161def1b5e304fa28e3d313f5d06e4615e755d239c6fdc1fc3cc557e6e79fedfc2cc02babf7316220f9f0c83b2992dda0508e4bcb51bca350046 WHIRLPOOL 1d6b51988ffaee08bd0862a9f907dad09e9303d368eff59a844fb1c2582fc228bf70812b63bd0a67b775c41d6b3dd56b1a7e5d6dc11ad67a426f82a90d091cc4
 EBUILD maruku-0.6.1.ebuild 1494 SHA256 67dc3db02c9b7e47f07f41b4c238bc9661ad14e2b4853a8edc5aaf4ef5bd9faa SHA512 3c76624c9a6b0cdbf1e9dcdea3c799d17ca00990a8a80615b235ede2e6aaefa95f9ca1df8f23be22a2e3051b69fa2a2f92bad254d8a87eb641c3b7f69558f54f WHIRLPOOL 5053ec7452ccea401760f826d603d4ce5768699d432c75b0d6a7c6b09a9d59adca8570a8dd4b695ef269aa606d2a3b9a1014f2790ae1af83d433f05f5616be22
-MISC ChangeLog 3558 SHA256 026b114f50a758477434ed6a9401bdcb9a249b23f1cecd2a96e7a004ceb5b8f4 SHA512 f3a4a894148e839cc39b2d3b470f5e61bbeaafb525d3fb50161b9e15ea68cd4f036b3325c22d5cb6dd0a6120fc549bca579a383e4088dfd248e3651099838e90 WHIRLPOOL 389e33a7bbd1e61316b23b9d95113d88662abb5a3f236acf93d56517ba095e99006ec1d619a4d3afa96fc3e9898ea1a73fefb3e6b97bb68bc0ed2f15113eb99c
+MISC ChangeLog 3729 SHA256 9a15420186a305f85c37e91e605aa4c65c3ad6bc5fa9a016488e58dd8ba36031 SHA512 882dbd783b6cb7933d96d881e63f4d7a8c12c13b8d33b3bfc31c2b1dc97b95e502a6748276e140a952fb8c8f3f46d99d00ccef084046d248b6f3682f3b2ec773 WHIRLPOOL ebf0802aef8f01a9ef0dcfc4ac8f11d13959b45f5b83845185e401133dcb65e393ac92593e14debbb58f0147b6cd4d3a40993be9f317412396c58cae46b45dba
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.20 (GNU/Linux)
+
+iF4EAREIAAYFAlIxXZ8ACgkQiIP6VqMIqNfRngD/Vt7C9n9PKcV/RLQWoDXVaJcf
+3imQEIF8g5nIftmFw28A/A8M1n5U0uS/KouaPSB9bqmIpe6JjunvCudeLEa9KXbf
+=ewIx
+-----END PGP SIGNATURE-----
