@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/maruku
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/maruku/ChangeLog,v 1.26 2013/09/04 11:44:36 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/maruku/ChangeLog,v 1.27 2013/09/12 06:22:18 graaff Exp $
+
+*maruku-0.6.1-r1 (12 Sep 2013)
+
+  12 Sep 2013; Hans de Graaff <graaff@gentoo.org> +maruku-0.6.1-r1.ebuild:
+  Revision bump to add ruby20, needed for bootstrapping yard.
 
   04 Sep 2013; Manuel Rüger <mrueg@gentoo.org> -maruku-0.6.0-r2.ebuild:
   Cleanup old.
